Expanded ending argument & fixed some citations.

--- a/Clique.bib
+++ b/Clique.bib
@@ -101,7 +101,7 @@ abstract = {}
 	doi = {10.1007/BF02289146}
 }
 @article{TsukiyamaETAL1977,
-	author = {Tsukiyama, S.; Ide, M.; Ariyoshi, I.; Shirakawa, I.},
+	author = {S. Tsukiyama; M. Ide; I. Ariyoshi; I. Shirakawa},
 	title = {A new algorithm for generating all the maximal independent sets},
 	journal = {SIAM Journal on Computing},
 	volume = {6},
