--- a/Cliques_via_cuts.tex
+++ b/Cliques_via_cuts.tex
@@ -108,7 +108,7 @@ max\_clique $\gets$ current\_clique \EndIf
 \end{algorithmic}
 \end{algorithm}
 
-\begin{thm} \label{main} Algorithm \ref{CC} Cliques via Cuts  is a subexponential algorithm for the maximum clique search problem. \end{thm}
+\begin{thm} \label{main} Algorithm \ref{CC} Cliques via Cuts  is a subexponential $2^{O(\sqrt[3]{n^2\log^2n})}$ algorithm for the maximum clique search problem. \end{thm}
 
 \begin{lem}\label{small} Lines 3-6 of algorithm \ref{CC} are recursively correct, and have worst case recursive bound $T(n) \le T(n-1) + O(n^2)$ \end{lem}
 \begin{proof} We will begin by proving the correctness of lines 2-6 of the algorithm. The maximum independent set on a disconnected graph is clearly the disjoint union of the maximum independent set on each of its components. Thus, the maximum clique  is the disjoint union of the maximum clique on each of the co-components. The runtime for this case is $T(n) \le T(a) + T(b) + O(n^2)$ where a + b = n if there are only two components.
@@ -129,10 +129,10 @@ $G[I]$ is an induced subgraph of $G\cup H$ proof: $G[I] = G[I] \cup (I,\emptyset
 \begin{lem}\label{cut} Lines 12-21 of algorithm \ref{CC} are recursively correct and have recuresive bound $T(n) \le 2^{\sqrt[3]{n^2\log^2 n}}(T(n/2+1)+ O(n^2)) + poly(n)$\end{lem}
 \begin{proof} Because H is a cut of $\bar{G}$ it is a subgraph; thus, $G$ is a subgraph of $\bar{H}$. So the maximum clique of $G$ is a subclique of a maximal clique of $\bar{H}$ which is identical to a maximal independent set of $H$. Thus by checking every maximal independent set of H we must find the maximum clique of G in at least one maximal independent set of H. Now combining this correctness with Lemmas \ref{size} and \ref{count}, and the nature of this third case always feeding back into the first case because of co-disconnectedness. Theorems \ref{GH} and \ref{CT} bound our work per case on line 12 and 13, Remark \ref{brevity} bounds 14-18 \& 21-22 and we get the third recursive bound of the algorithm.
 \end{proof}
-\begin{proof}Now we can finish theorem \ref{main}. The recursive correctness of each section means that by induction the algorithms correctness follows from its correctness on small cases. Clearly the bound in Lemma \ref{small} is dominated by the bound in Lemma \ref{sparse}. Furthermore, the bound in \ref{sparse} can be made nonrecursive $T(n) \le T(n-1) + T(n-\sqrt[3]{n\log n}) + O(n^2) \le \sqrt[3]{n\log n} T(n- \sqrt[3]{n\log n}) + poly(n) \le 2^{\frac{n\log n}{ \sqrt[3]{n\log n}}+ O(\log n) } \le 2^{O(\sqrt[3]{n^2\log^2n})}$. Lemma \ref{cut} has the same upper bound $T(n) \le  2^{\sqrt[3]{n^2\log^2 n}}(T(n/2+1)+ O(n^2)) + poly(n) \le 2^{O(\sqrt[3]{n^2\log^2 n})\sum_{i=0}^{logn} (\frac{1}{\sqrt[3]{4}})^i} \le 2^{O(\sqrt[3]{n^2\log^2 n})}$ Since these bounds match, they bound the algorithm as a whole.
+\begin{proof}Now we can finish theorem \ref{main}. The recursive correctness of each section means that by induction the algorithms correctness follows from its correctness on small cases. Clearly the bound in Lemma \ref{small} is dominated by the bound in Lemma \ref{sparse}. Furthermore, the bound in \ref{sparse} can be made nonrecursive $T(n) \le T(n-1) + T(n-\sqrt[3]{n\log n}) + O(n^2) \le \sqrt[3]{n\log n} T(n- \sqrt[3]{n\log n}) + poly(n) \le 2^{\frac{n\log n}{ \sqrt[3]{n\log n}}+ O(\log n) } \le 2^{O(\sqrt[3]{n^2\log^2n})}$. Lemma \ref{cut} has the same upper bound $T(n) \le  2^{\sqrt[3]{n^2\log^2 n}}(T(n/2+1)+ O(n^2)) + poly(n) \le 2^{O(\sqrt[3]{n^2\log^2 n})\sum_{i=0}^{logn} (\frac{1}{\sqrt[3]{4}})^i} \le 2^{O(\sqrt[3]{n^2\log^2 n})}$. Now to bound a recursion tree with mixed cases: Let R be the recursion tree with c,s,d nodes corresponding to the three recursion relations when the graph is co-connected, sparse or dense. Clearly a recursion tree with c,s,d nodes can be upper bounded in size by a recursion tree with only s,d nodes and replace each c node an s node whose new subtree is a pure s recursion tree. Then, a recursion tree with only s, d nodes can be upper bounded by a recursion tree with only s nodes by replacing each d node with s nodes of the appropriate size since the bounds on pure s trees match the bounds on pure d trees. Therefore a recursion tree with all three cases occuring is bounded above by a recursion tree where only the sparse case occurs which has the stated subexponential bound; thus, the theorem follows.
 \end{proof}
 \begin{cor} The Exponential Time Hypothesis is False; and NEXPTIME is not a subset of Nonuniform Polynomial time\end{cor}
-\begin{proof} Take theorem \ref{main} and combine with theorem \ref{cliquebound} and \ref{complexity} \end{proof}
+\begin{proof} Take theorem \ref{main} and combine with theorem \ref{cliquebound} and \ref{complexity} [missing citation about Williams 2010] \end{proof}
 \section{Conclusion}
 I know that claiming this disproof is an very high stakes claim; therefore, if this paper is wrong, please politely refute. If each step in a proof has failure probability $1-p$ and the proof has n steps; then, the proof has validity probability $p^n$. Thus shorter human written proofs are more convincing. Regardless, I think this paper presents a simple interesting algorithm. I think a lot of interesting heuristics could fit in between lines 6 and 7 of the algorithm, but that was not the goal with this paper. The goal of this paper was to demonstrate my competency in computational complexity and graph theory.
 \bibliographystyle{plain}
