--- a/Cliques_via_cuts.tex
+++ b/Cliques_via_cuts.tex
@@ -28,7 +28,7 @@
 \begin{document}
 
 
-\title{Cliques via Cuts: \\ Refuting the Exponential Time Hypothesis with a Subexponential Algorithm for Clique}
+\title{Refuted: \\Cliques via Cuts: \\ Refuting the Exponential Time Hypothesis with a Subexponential Algorithm for Clique}
 
 \author{Alexander Bistagne \\ 
 Independent Research 2023}
@@ -36,6 +36,7 @@ Independent Research 2023}
 \maketitle
 
 \begin{abstract}
+  This paper was refuted by its author in December 2023. I am posting the refutation in februrary 2024.
   This paper presents a short algorithm which finds a maximum clique in time $2^{ O(\sqrt[3]{n^2log^2(n)}) } $. Rather than try to improve the average runtime of the algorithm, this paper attempts to present the simplest algorithm with this runtime, so as to minimize risk of analysis error.
 
 \end{abstract}
